--- a/Xamarin_Maps.iOS/Xamarin_Maps.iOS.csproj
+++ b/Xamarin_Maps.iOS/Xamarin_Maps.iOS.csproj
@@ -122,10 +122,10 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Syncfusion.Xamarin.SfMaps">
-      <Version>17.4.0.44</Version>
+      <Version>*</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
