--- a/Xamarin_Maps/Xamarin_Maps.csproj
+++ b/Xamarin_Maps/Xamarin_Maps.csproj
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
-    <PackageReference Include="Syncfusion.Xamarin.SfMaps" Version="17.4.0.44" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Syncfusion.Xamarin.SfMaps" Version="*" />
   </ItemGroup>
 </Project>
